--- a/Front-DamasuBank/package.json
+++ b/Front-DamasuBank/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
+    "@ngrx/store": "^17.1.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "express": "^4.18.2",
